--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL_GCC/CL_GCC.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL_GCC/CL_GCC.cshtml
@@ -187,7 +187,7 @@
                     <span class="spanFWCZ">出厂年限</span>
                 </div>
                 <div class="div_row_right">
-                    <div id="divCCNXText" class="div_select_out SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
+                    <div id="divCCNXText" class="div_select_out SRK" style="z-index: 997;">
                         <div id="divCCNXSpan" class="div_select_in" style="border: none; margin-top: 6px;">
                             <span id="spanCCNX" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择出厂年限</span>
                             <div class="span_select_arrow"></div>
@@ -195,7 +195,7 @@
                         <div id="divCCNX" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
                         </div>
                     </div>
-                    <div id="divCCYFText" class="div_select_out SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
+                    <div id="divCCYFText" class="div_select_out SRK" style="z-index: 997;">
                         <div id="divCCYFSpan" class="div_select_in" style="border: none; margin-top: 6px;">
                             <span id="spanCCYF" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择出厂月份</span>
                             <div class="span_select_arrow"></div>
