--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CW_CWG/CW_CWG.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CW_CWG/CW_CWG.cshtml
@@ -91,15 +91,15 @@
                         <img class="img_radio" id="img_sf_sjzr"/><label class="label_radio">商家转让</label>
                     </div>
                 </div>
-                <div id="divGQTip" class="Warn" style="z-index: 996; position: relative;"></div>
+                <div id="divGQTip" class="Warn" style="z-index: 999; position: relative;"></div>
             </div>
-            <div id="divCWGPZ" class="div_row" style="z-index: 999">
+            <div id="divCWGPZ" class="div_row" style="z-index: 998">
                 <div class="div_row_left" style="margin-left: 128px;">
                     <span class="span_required">*</span>
                     <span class="spanFWCZ">品种</span>
                 </div>
                 <div class="div_row_right">
-                    <div id="divPZText" class="div_select_out SRK" style="position: relative;">
+                    <div id="divPZText" class="div_select_out SRK" style="position: relative; z-index: 997;">
                         <div id="divPZSpan" class="div_select_in" style="border: none; margin-top: 6px;">
                             <span id="spanPZ" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择品种</span>
                             <div class="span_select_arrow"></div>
@@ -120,7 +120,7 @@
                 </div>
                 <div id="divCWGPZTip" class="Warn" style="z-index: 996; position: relative;"></div>
             </div>
-            <div id="divJG" class="div_row" style="z-index: 998;">
+            <div id="divJG" class="div_row" style="z-index: 995;">
                 <div class="div_row_left" style="margin-left: 128px;">
                     <span class="span_required">*</span>
                     <span class="spanFWCZ">价格</span>
@@ -131,9 +131,9 @@
                         <span class="spaninput_fontcolor">元/只</span>
                     </span>
                 </div>
-                <div id="divJGTip" class="Warn" style="z-index: 998; position: relative;"></div>
+                <div id="divJGTip" class="Warn" style="z-index: 994; position: relative;"></div>
             </div>
-            <div id="divNL" class="div_row" style="z-index: 997">
+            <div id="divCWGNL" class="div_row" style="z-index: 993">
                 <div class="div_row_left" style="margin-left: 128px;">
                     <span class="span_required">*</span>
                     <span class="spanFWCZ">年龄</span>
@@ -142,24 +142,24 @@
                     <span id="spanNL" class="span_spaninput SRK" style="display: inline-block;">
                         <input id="NL" maxlength="9" column="NL" class="input_spaninput spaninput_fontcolor" type="text" style="width: 146px" />
                     </span>
-                    <div id="divNLDWText" class="div_select_out SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
+                    <div id="divNLDWText" class="div_select_out SRK" style="z-index: 992;">
                         <div id="divNLDWSpan" class="div_select_in" style="border: none; margin-top: 6px;">
-                            <span id="spanNLDW" column="NLDW" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择</span>
+                            <span id="spanNLDW" column="NLDW" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择年龄单位</span>
                             <div class="span_select_arrow"></div>
                         </div>
                         <div id="divNLDW" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
                         </div>
                     </div>
-                    <div id="divNLTip" class="Warn" style="z-index: 997; position: relative;"></div>
+                    <div id="divCWGNLTip" class="Warn" style="z-index: 991; position: relative;"></div>
                 </div>
             </div>
-            <div id="divCWGXB" class="div_row" style="z-index: 996">
+            <div id="divCWGXB" class="div_row" style="z-index: 990">
                 <div class="div_row_left" style="margin-left: 128px;">
                     <span class="span_required">*</span>
                     <span class="spanFWCZ">性别</span>
                 </div>
                 <div class="div_row_right">
-                    <div id="divXBText" class="div_select_out SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
+                    <div id="divXBText" class="div_select_out SRK" style="z-index: 989;">
                         <div id="divXBSpan" class="div_select_in" style="border: none; margin-top: 6px;">
                             <span id="spanXB" column="XB" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择</span>
                             <div class="span_select_arrow"></div>
@@ -167,10 +167,10 @@
                         <div id="divXB" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
                         </div>
                     </div>
-                    <div id="divXBTip" class="Warn" style="z-index: 996;"></div>
                 </div>
+                <div id="divCWGXBTip" class="Warn" style="z-index: 988;"></div>
             </div>
-            <div id="divCWGMS" class="div_row" style="z-index: 995">
+            <div id="divCWGMS" class="div_row" style="z-index: 987">
                 <div class="div_row_left" style="margin-left: 128px;">
                     <span class="span_required">&nbsp;</span>
                     <span class="spanFWCZ">毛色</span>
@@ -179,51 +179,53 @@
                     <span id="spanMS" class="span_spaninput SRK" style="display: inline-block;">
                         <input id="MS" maxlength="9" column="MS" class="input_spaninput spaninput_fontcolor" type="text" style="width: 146px" />
                     </span>
-                    <div id="divMSTip" class="Warn" style="z-index: 995;"></div>
                 </div>
+                <div id="divMSTip" class="Warn" style="z-index: 986;"></div>
             </div>
-            <div id="divQCQK" class="div_row" style="z-index: 994;">
+            <div id="divQCQK" class="div_row" style="z-index: 985;">
                 <div class="div_row_left" style="margin-left: 100px;">
                     <span class="span_required">*</span>
                     <span class="spanFWCZ">驱虫情况</span>
                 </div>
                 <div class="div_row_right">
                     <div class="div_radio" id="div_qcqk_yqc">
-                        <img class="img_radio" id="img_qcqk_yqc" /><label class="label_radio">已驱虫</label>
+                        <img class="img_radio" id="img_qcqk_yqc"/><label class="label_radio">已驱虫</label>
                     </div>
                     <div class="div_radio" id="div_qcqk_wqc">
-                        <img class="img_radio" id="img_qcqk_wqc" /><label class="label_radio">未驱虫</label>
+                        <img class="img_radio" id="img_qcqk_wqc"/><label class="label_radio">未驱虫</label>
                     </div>
                 </div>
+                <div id="divQCQKTip" class="Warn" style="z-index: 984;"></div>
             </div>
-            <div id="divCWGYMQK" class="div_row" style="z-index: 993;">
+            <div id="divCWGYMQK" class="div_row" style="z-index: 983;">
                 <div class="div_row_left" style="margin-left: 101px;">
                     <span class="span_required">*</span>
                     <span class="spanFWCZ">疫苗情况</span>
                 </div>
                 <div class="div_row_right">
-                    <div id="divYMQKText" class="div_select_out SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
+                    <div id="divYMQKText" class="div_select_out SRK" style="z-index: 982;">
                         <div id="divYMQKSpan" class="div_select_in" style="border: none; margin-top: 6px;">
-                            <input type="hidden" id="QYCode" />
-                            <span id="spanYMQK" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择</span>
+                            <input type="hidden" id="QYCode"/>
+                            <span id="spanYMQK" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择针数</span>
                             <div class="span_select_arrow"></div>
                         </div>
                         <div id="divYMQK" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
                         </div>
                     </div>
-                    <div id="divYMZLText" class="div_select_out SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
+                    <div id="divYMZLText" class="div_select_out SRK" style="z-index: 981;">
                         <div id="divYMZLSpan" class="div_select_in" style="border: none; margin-top: 6px;">
-                            <span id="spanYMZL" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择</span>
+                            <span id="spanYMZL" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择疫苗种类</span>
                             <div class="span_select_arrow"></div>
                         </div>
                         <div id="divYMZL" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
                         </div>
                     </div>
                 </div>
+                <div id="divCWGYMQKTip" class="Warn" style="z-index: 980;"></div>
             </div>
-            <div id="divQQSPKG" class="div_row">
+            <div id="divSPKG" class="div_row">
                 <div class="div_row_left" style="margin-left: 78px;">
-                    <span class="span_required">*</span>
+                    <span class="span_required">&nbsp;</span>
                     <span class="spanFWCZ">QQ视频看狗</span>
                 </div>
                 <div class="div_row_right">
