--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CW_CWYPSP/CW_CWYPSP.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CW_CWYPSP/CW_CWYPSP.cshtml
@@ -123,7 +123,7 @@
                     <span class="spanFWCZ">新旧</span>
                 </div>
                 <div class="div_row_right">
-                    <div id="divXJText" class="div_select_out SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
+                    <div id="divXJText" class="div_select_out SRK" style="z-index: 997;">
                         <div id="divXJSpan" class="div_select_in" style="border: none; margin-top: 6px;">
                             <span id="spanXJ" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择新旧</span>
                             <div class="span_select_arrow"></div>
