--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC_DZF/FC_DZF.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC_DZF/FC_DZF.cshtml
@@ -100,7 +100,7 @@
                     <span class="spanFWCZ">类型</span>
                 </div>
                 <div class="div_row_right">
-                    <div id="divFWLXText" class="div_select_out SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
+                    <div id="divFWLXText" class="div_select_out SRK" style="z-index: 997;">
                         <div id="divFWLXSpan" class="div_select_in" style="border: none; margin-top: 6px;">
                             <span id="spanFWLX" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择类型</span>
                             <div class="span_select_arrow"></div>
@@ -133,7 +133,7 @@
                     <span id="spanZJ" class="span_spaninput SRK" style="display: inline-block;">
                         <input id="ZJ" maxlength="9" column="ZJ" class="input_spaninput spaninput_fontcolor" type="text" style="width: 124px" />
                     </span>
-                    <div id="divZJDWText" class="div_select_out SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
+                    <div id="divZJDWText" class="div_select_out SRK" style="z-index: 997;">
                         <div id="divZJDWSpan" class="div_select_in" style="border: none; margin-top: 6px;">
                             <span id="spanZJDW" class="span_select spaninput_fontcolor" style="margin-top: 0">元/天</span>
                             <div class="span_select_arrow"></div>
