--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/QZZP_JZZP/QZZP_JZZP.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/QZZP_JZZP/QZZP_JZZP.cshtml
@@ -250,7 +250,7 @@
                     <span>工作城市</span>
                 </div>
                 <div class="div_row_right">
-                    <div id="divGZCSText" class="div_select_out SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
+                    <div id="divGZCSText" class="div_select_out SRK" style="z-index: 997;">
                         <div id="divGZCSSpan" class="div_select_in" style="border: none; margin-top: 6px;">
                             <input type="hidden" id="CityName" />
                             <span id="spanGZCS" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择工作城市</span>
