--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SWFW_HYZX/SWFW_HYZX.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SWFW_HYZX/SWFW_HYZX.cshtml
@@ -236,7 +236,7 @@
                 </div>
                 <div class="div_row_right">
                     <input id="YSJG" column="YSJG" class="span_spaninput input_input SRK" type="text" placeholder="请输入运输价格" style="width: 150px;" />
-                    <div id="divYSJGDWText" class="div_select_out SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
+                    <div id="divYSJGDWText" class="div_select_out SRK" style="z-index: 997;">
                         <div id="divYSJGDWSpan" class="div_select_in" style="border: none; margin-top: 6px;">
                             <span id="spanYSJGDW" class="span_select spaninput_fontcolor" style="margin-top: 0">元/吨</span>
                             <div class="span_select_arrow"></div>
