--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/XXYL_HPG/XXYL_HPG.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/XXYL_HPG/XXYL_HPG.cshtml
@@ -94,7 +94,7 @@
                     <span class="spanFWCZ">可容纳人数</span>
                 </div>
                 <div class="div_row_right">
-                    <div id="divKRNRSText" class="div_select_out SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
+                    <div id="divKRNRSText" class="div_select_out SRK" style="z-index: 997;">
                         <div id="divKRNRSSpan" class="div_select_in" style="border: none; margin-top: 6px;">
                             <span id="spanKRNRS" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择</span>
                             <div class="span_select_arrow"></div>
