--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL_JC/CL_JC.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL_JC/CL_JC.cshtml
@@ -190,7 +190,7 @@
                     <span class="spanFWCZ">牌照所在地</span>
                 </div>
                 <div class="div_row_right">
-                    <div id="divPZSZSFText" class="div_select_out SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
+                    <div id="divPZSZSFText" class="div_select_out SRK" style="z-index: 997;">
                         <div id="divPZSZSFSpan" class="div_select_in" style="border: none; margin-top: 6px;">
                             <input type="hidden" id="SPSF" />
                             <span id="spanPZSZSF" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择上牌省份</span>
@@ -199,7 +199,7 @@
                         <div id="divPZSZSF" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
                         </div>
                     </div>
-                    <div id="divPZSZCSText" class="div_select_out SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
+                    <div id="divPZSZCSText" class="div_select_out SRK" style="z-index: 997;">
                         <div id="divPZSZCSSpan" class="div_select_in" style="border: none; margin-top: 6px;">
                             <span id="spanPZSZCS" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择上牌城市</span>
                             <div class="span_select_arrow"></div>
@@ -215,7 +215,7 @@
                     <span class="spanFWCZ">过户次数</span>
                 </div>
                 <div class="div_row_right">
-                    <div id="divGHCSText" class="div_select_out SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
+                    <div id="divGHCSText" class="div_select_out SRK" style="z-index: 997;">
                         <div id="divGHCSSpan" class="div_select_in" style="border: none; margin-top: 6px;">
                             <span id="spanGHCS" class="span_select spaninput_fontcolor" style="margin-top: 0">过户次数</span>
                             <div class="span_select_arrow"></div>
@@ -231,7 +231,7 @@
                     <span class="spanFWCZ">年检到期</span>
                 </div>
                 <div class="div_row_right">
-                    <div id="divNJDQNFText" class="div_select_out SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
+                    <div id="divNJDQNFText" class="div_select_out SRK" style="z-index: 997;">
                         <div id="divNJDQNFSpan" class="div_select_in" style="border: none; margin-top: 6px;">
                             <span id="spanNJDQNF" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择到期年份</span>
                             <div class="span_select_arrow"></div>
@@ -239,7 +239,7 @@
                         <div id="divNJDQNF" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
                         </div>
                     </div>
-                    <div id="divNJDQYFText" class="div_select_out SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
+                    <div id="divNJDQYFText" class="div_select_out SRK" style="z-index: 997;">
                         <div id="divNJDQYFSpan" class="div_select_in" style="border: none; margin-top: 6px;">
                             <span id="spanNJDQYF" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择到期月份</span>
                             <div class="span_select_arrow"></div>
@@ -255,7 +255,7 @@
                     <span class="spanFWCZ">交强险到期</span>
                 </div>
                 <div class="div_row_right">
-                    <div id="divJQXDQNFText" class="div_select_out SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
+                    <div id="divJQXDQNFText" class="div_select_out SRK" style="z-index: 997;">
                         <div id="divJQXDQNFSpan" class="div_select_in" style="border: none; margin-top: 6px;">
                             <span id="spanJQXDQNF" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择到期年份</span>
                             <div class="span_select_arrow"></div>
@@ -263,7 +263,7 @@
                         <div id="divJQXDQNF" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
                         </div>
                     </div>
-                    <div id="divJQXDQYFText" class="div_select_out SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
+                    <div id="divJQXDQYFText" class="div_select_out SRK" style="z-index: 997;">
                         <div id="divJQXDQYFSpan" class="div_select_in" style="border: none; margin-top: 6px;">
                             <span id="spanJQXDQYF" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择到期月份</span>
                             <div class="span_select_arrow"></div>
@@ -279,7 +279,7 @@
                     <span class="spanFWCZ">商业险到期</span>
                 </div>
                 <div class="div_row_right">
-                    <div id="divSYXDQNFText" class="div_select_out SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
+                    <div id="divSYXDQNFText" class="div_select_out SRK" style="z-index: 997;">
                         <div id="divSYXDQNFSpan" class="div_select_in" style="border: none; margin-top: 6px;">
                             <span id="spanSYXDQNF" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择到期年份</span>
                             <div class="span_select_arrow"></div>
@@ -287,7 +287,7 @@
                         <div id="divSYXDQNF" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
                         </div>
                     </div>
-                    <div id="divSYXDQYFText" class="div_select_out SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
+                    <div id="divSYXDQYFText" class="div_select_out SRK" style="z-index: 997;">
                         <div id="divSYXDQYFSpan" class="div_select_in" style="border: none; margin-top: 6px;">
                             <span id="spanSYXDQYF" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择到期月份</span>
                             <div class="span_select_arrow"></div>
