--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ES_SJSM_ESSJ/ES_SJSM_ESSJ.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ES_SJSM_ESSJ/ES_SJSM_ESSJ.cshtml
@@ -99,7 +99,7 @@
                     <span class="spanFWCZ">手机品牌与型号</span>
                 </div>
                 <div class="div_row_right">
-                    <div id="divSJPPText" class="div_select_out SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
+                    <div id="divSJPPText" class="div_select_out SRK" style="z-index: 997;">
                         <div id="divSJPPSpan" class="div_select_in" style="border: none; margin-top: 6px;">
                             <input id="PPID" type="hidden"/>
                             <span id="spanSJPP" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择品牌</span>
@@ -108,7 +108,7 @@
                         <div id="divSJPP" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
                         </div>
                     </div>
-                    <div id="divSJXHText" class="div_select_out SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
+                    <div id="divSJXHText" class="div_select_out SRK" style="z-index: 997;">
                         <div id="divSJXHSpan" class="div_select_in" style="border: none; margin-top: 6px;">
                             <span id="spanSJXH" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择型号</span>
                             <div class="span_select_arrow"></div>
