--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC_CKCFTDCW/FC_CKCFTDCW.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC_CKCFTDCW/FC_CKCFTDCW.cshtml
@@ -134,7 +134,7 @@
                         <div id="divQY" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
                         </div>
                     </div>
-                    <div id="divSQText" class="div_select_out SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
+                    <div id="divSQText" class="div_select_out SRK" style="z-index: 997;">
                         <div id="divSQSpan" class="div_select_in" style="border: none; margin-top: 6px;">
                             <span id="spanSQ" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择商圈</span>
                             <div class="span_select_arrow"></div>
@@ -166,7 +166,7 @@
                     <span id="spanZJ" class="span_spaninput SRK" style="display: inline-block;">
                         <input id="ZJ" maxlength="9" column="ZJ" class="input_spaninput spaninput_fontcolor" type="text" style="width: 124px" />
                     </span>
-                    <div id="divZJDWText" class="div_select_out SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
+                    <div id="divZJDWText" class="div_select_out SRK" style="z-index: 997;">
                         <div id="divZJDWSpan" class="div_select_in" style="border: none; margin-top: 6px;">
                             <span id="spanZJDW" class="span_select spaninput_fontcolor" style="margin-top: 0">元/㎡/天</span>
                             <div class="span_select_arrow"></div>
