--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC_ZZF/FC_ZZF.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FC_ZZF/FC_ZZF.cshtml
@@ -198,7 +198,7 @@
                         <input id="ZJ" maxlength="9" column="ZJ" class="input_spaninput spaninput_fontcolor" type="text" style="width: 100px" />
                         <span class="spaninput_fontcolor">元/月</span>
                     </span>
-                    <div id="divYFFSText" class="div_select_out SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
+                    <div id="divYFFSText" class="div_select_out SRK" style="z-index: 997;">
                         <div id="divYFFSSpan" class="div_select_in" style="border: none; margin-top: 6px;">
                             <span id="spanYFFS" column="YFFS" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择押付方式</span>
                             <div class="span_select_arrow"></div>
