--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/PWKQ_QTKQ/PWKQ_QTKQ.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/PWKQ_QTKQ/PWKQ_QTKQ.cshtml
@@ -88,12 +88,13 @@
                 </div>
                 <div class="div_row_right">
                     <div class="div_radio" id="div_gq_zr">
-                        <img class="img_radio" id="img_gq_zr" /><label class="label_radio">转让</label>
+                        <img class="img_radio" id="img_gq_zr"/><label class="label_radio">转让</label>
                     </div>
                     <div class="div_radio" id="div_gq_qg">
-                        <img class="img_radio" id="img_gq_qg" /><label class="label_radio">求购</label>
+                        <img class="img_radio" id="img_gq_qg"/><label class="label_radio">求购</label>
                     </div>
                 </div>
+                <div id="divGQTip" class="Warn" style="z-index: 999; position: relative;"></div>
             </div>
             <div id="divJG" class="div_row" style="z-index: 992;">
                 <div class="div_row_left" style="margin-left: 128px;">
@@ -106,24 +107,24 @@
                         <span class="spaninput_fontcolor">元</span>
                     </span>
                 </div>
-                <div id="divYJTip" class="Warn" style="z-index: 992; position: relative;"></div>
+                <div id="divJGTip" class="Warn" style="z-index: 992; position: relative;"></div>
             </div>
-            <div id="divDD" class="div_row" style="z-index: 991;">
+            <div id="divSZQY" class="div_row" style="z-index: 991;">
                 <div class="div_row_left" style="margin-left: 100px;">
                     <span class="span_required">*</span>
                     <span class="spanFWCZ">交易地点</span>
                 </div>
                 <div class="div_row_right">
-                    <div id="divQYText" class="div_select_out SRK" style="z-index: 997; ">
+                    <div id="divQYText" class="div_select_out SRK" style="z-index: 997;">
                         <div id="divQYSpan" class="div_select_in" style="border: none; margin-top: 6px;">
-                            <input type="hidden" id="QYCode" />
+                            <input type="hidden" id="QYCode"/>
                             <span id="spanQY" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择区域</span>
                             <div class="span_select_arrow"></div>
                         </div>
                         <div id="divQY" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
                         </div>
                     </div>
-                    <div id="divDDText" class="div_select_out SRK" style="z-index: 997; ">
+                    <div id="divDDText" class="div_select_out SRK" style="z-index: 997;">
                         <div id="divDDSpan" class="div_select_in" style="border: none; margin-top: 6px;">
                             <span id="spanDD" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择地段</span>
                             <div class="span_select_arrow"></div>
@@ -132,6 +133,7 @@
                         </div>
                     </div>
                 </div>
+                <div id="divSZQYTip" class="Warn" style="z-index: 999; position: relative;"></div>
             </div>
             <div id="divXXXX" class="div_split" style="display: block; text-align: left;">
                 <span class="span_split">详细信息</span>
