--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/CY/CY_WM.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/CY/CY_WM.css
@@ -1,1 +1,16 @@
-﻿
+﻿.ulFWPZ img {
+    width: 16px;
+    height: 16px;
+    cursor: pointer;
+    border: none !important;
+    margin-right: 5px;
+}
+
+.ulFWPZ li {
+    display: inline-block;
+    width: 120px;
+    height: 30px;
+    text-align: left;
+    margin-top: 4px;
+    cursor: pointer;
+}
