--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CY_WM/CY_WM.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CY_WM/CY_WM.cshtml
@@ -93,8 +93,9 @@
                     <span class="span_required">*</span>
                     <span id="spanWMLB">类别</span>
                 </div>
-                <div id="divWMLBText" class="div_row_right" style="position: relative; ">
+                <div id="divWMLBText" class="div_row_right" style="position: relative;">
                 </div>
+                <div id="divWMLBTip" class="Warn" style="z-index: 998; position: relative;"></div>
             </div>
             <div id="divRJXF" class="div_row" style="z-index: 998;">
                 <div class="div_row_left">
@@ -103,7 +104,7 @@
                 </div>
                 <div class="div_row_right">
                     <span id="spanRJXF" class="span_spaninput SRK" style="display: inline-block;">
-                        <input class="input_spaninput spaninput_fontcolor" id="RJXF" maxlength="9" column="RJXF" type="text" style="width: 100px" />
+                        <input class="input_spaninput spaninput_fontcolor" id="RJXF" maxlength="9" column="RJXF" type="text" style="width: 120px" />
                         <span class="spaninput_fontcolor">元</span>
                     </span>
                 </div>
@@ -211,22 +212,22 @@
                 <span class="span_split">联系人信息</span>
                 <em class="em_split"></em>
             </div>
-            <div id="divXXDZ" class="div_row" style="z-index: 991;">
+            <div id="divSZQY" class="div_row" style="z-index: 991;">
                 <div class="div_row_left" style="margin-left: 100px;">
                     <span class="span_required">*</span>
                     <span class="spanFWCZ">详细地址</span>
                 </div>
                 <div class="div_row_right">
-                    <div id="divQYText" class="div_select_out SRK" style="z-index: 997; ">
+                    <div id="divQYText" class="div_select_out SRK" style="z-index: 997;">
                         <div id="divQYSpan" class="div_select_in" style="border: none; margin-top: 6px;">
-                            <input type="hidden" id="QYCode" />
+                            <input type="hidden" id="QYCode"/>
                             <span id="spanQY" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择区域</span>
                             <div class="span_select_arrow"></div>
                         </div>
                         <div id="divQY" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
                         </div>
                     </div>
-                    <div id="divDDText" class="div_select_out SRK" style="z-index: 997; ">
+                    <div id="divDDText" class="div_select_out SRK" style="z-index: 997;">
                         <div id="divDDSpan" class="div_select_in" style="border: none; margin-top: 6px;">
                             <span id="spanDD" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择地段</span>
                             <div class="span_select_arrow"></div>
@@ -234,8 +235,9 @@
                         <div id="divDD" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
                         </div>
                     </div>
-                    <input id="JYJTDZ" column="JYJTDZ" class="span_spaninput input_input SRK" type="text" placeholder="请填写具体地址" style="width: 300px" />
+                    <input id="JTDZ" column="JTDZ" class="span_spaninput input_input SRK" type="text" placeholder="请填写具体地址" style="width: 300px"/>
                 </div>
+                <div id="divSZQYTip" class="Warn" style="z-index: 998; position: relative;"></div>
             </div>
             <div id="divLXR" class="div_row" style="z-index: 990">
                 <div class="div_row_left" style="margin-left: 114px;">
