--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/LR_MJ/LR_MJ.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/LR_MJ/LR_MJ.cshtml
@@ -95,6 +95,7 @@
                 </div>
                 <div id="divMJLBText" class="div_row_right" style="position: relative;">
                 </div>
+                <div id="divMJLBTip" class="Warn" style="z-index: 998; position: relative;"></div>
             </div>
             <div id="divXXXX" class="div_split" style="display: block; text-align: left;">
                 <span class="span_split">特色描述</span>
