--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ZSJM_CY/ZSJM_CY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ZSJM_CY/ZSJM_CY.cshtml
@@ -94,6 +94,7 @@
                         </div>
                     </div>
                 </div>
+                <div id="divCYLBTip" class="Warn" style="z-index: 998; position: relative;"></div>
             </div>
             <div id="divPPMC" class="div_row" style="margin-top: 22px; z-index: 998; ">
                 <div class="div_row_left">
@@ -101,13 +102,13 @@
                     <span id="spanPPMC">品牌名称</span>
                 </div>
                 <div class="div_row_right">
-                    <input id="PPMC" maxlength="50" column="PPMC" class="span_spaninput SRK" style="width: 594px; padding: 6px 12px;" type="text" placeholder="填写真实的品牌名称可以提升搜索流量，增加品牌曝光" />
-                    <div id="divPPMCTip"></div>
+                    <input id="PPMC" maxlength="50" column="PPMC" class="span_spaninput SRK" style="width: 594px; padding: 6px 12px;" type="text" placeholder="填写真实的品牌名称可以提升搜索流量，增加品牌曝光"/>
                 </div>
+                <div id="divPPMCTip"></div>
             </div>
             <div id="divCYPPLS" class="div_row" style="z-index: 997;">
                 <div class="div_row_left">
-                    <span class="span_required">*</span>
+                    <span class="span_required">&nbsp;</span>
                     <span class="spanFWCZ">品牌历史</span>
                 </div>
                 <div class="div_row_right">
@@ -120,6 +121,7 @@
                         </div>
                     </div>
                 </div>
+                <div id="divCYPPLSTip" class="Warn" style="z-index: 998; position: relative;"></div>
             </div>
             <div id="divCYTZJE" class="div_row" style="z-index: 996;">
                 <div class="div_row_left">
@@ -136,10 +138,11 @@
                         </div>
                     </div>
                 </div>
+                <div id="divCYTZJETip" class="Warn" style="z-index: 998; position: relative;"></div>
             </div>
             <div id="divCYQGFDS" class="div_row" style="z-index: 995;">
                 <div class="div_row_left" style="margin-left: 85px;">
-                    <span class="span_required">*</span>
+                    <span class="span_required">&nbsp;</span>
                     <span class="spanFWCZ">全国分店数</span>
                 </div>
                 <div class="div_row_right">
@@ -152,10 +155,11 @@
                         </div>
                     </div>
                 </div>
+                <div id="divCYQGFDSTip" class="Warn" style="z-index: 998; position: relative;"></div>
             </div>
             <div id="divCYDDMJ" class="div_row" style="z-index: 994;">
                 <div class="div_row_left">
-                    <span class="span_required">*</span>
+                    <span class="span_required">&nbsp;</span>
                     <span class="spanFWCZ">单店面积</span>
                 </div>
                 <div class="div_row_right">
@@ -168,14 +172,16 @@
                         </div>
                     </div>
                 </div>
+                <div id="divCYDDMJTip" class="Warn" style="z-index: 998; position: relative;"></div>
             </div>
             <div id="divSHRQ" class="div_row" style="z-index: 993;">
                 <div class="div_row_left">
-                    <span class="span_required">*</span>
+                    <span class="span_required">&nbsp;</span>
                     <span id="spanSHRQ">适合人群</span>
                 </div>
                 <div id="divSHRQText" class="div_row_right" style="position: relative;">
                 </div>
+                <div id="divSHRQTip" class="Warn" style="z-index: 998; position: relative;"></div>
             </div>
             <div id="divBT" class="div_row" style="margin-top: 22px; z-index: 993;">
                 <div class="div_row_left" style="margin-left: 128px;">
@@ -204,6 +210,7 @@
                 </div>
                 <div id="divZSDQText" class="div_row_right" style="position: relative;">
                 </div>
+                <div id="divZSDQTip" class="Warn" style="z-index: 998; position: relative;"></div>
             </div>
             <div id="divXXXX" class="div_split" style="display: block; text-align: left;">
                 <span class="span_split">加盟项目描述</span>
