--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ZSJM_JC/ZSJM_JC.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ZSJM_JC/ZSJM_JC.cshtml
@@ -79,7 +79,7 @@
                 <span class="span_split">基本信息</span>
                 <em class="em_split"></em>
             </div>
-            <div id="divCYLB" class="div_row" style="z-index: 999;">
+            <div id="divJCLB" class="div_row" style="z-index: 999;">
                 <div class="div_row_left" style="margin-left: 128px;">
                     <span class="span_required">*</span>
                     <span class="spanFWCZ">类别</span>
@@ -94,6 +94,7 @@
                         </div>
                     </div>
                 </div>
+                <div id="divJCLBTip" class="Warn" style="z-index: 998; position: relative;"></div>
             </div>
             <div id="divPPMC" class="div_row" style="margin-top: 22px; z-index: 998; ">
                 <div class="div_row_left">
@@ -121,7 +122,7 @@
                     </div>
                 </div>
             </div>
-            <div id="divCYTZJE" class="div_row" style="z-index: 996;">
+            <div id="divJCTZJE" class="div_row" style="z-index: 996;">
                 <div class="div_row_left">
                     <span class="span_required">*</span>
                     <span class="spanFWCZ">投资金额</span>
@@ -136,6 +137,7 @@
                         </div>
                     </div>
                 </div>
+                <div id="divJCTZJETip" class="Warn" style="z-index: 998; position: relative;"></div>
             </div>
             <div id="divCYQGFDS" class="div_row" style="z-index: 995;">
                 <div class="div_row_left" style="margin-left: 85px;">
@@ -204,6 +206,7 @@
                 </div>
                 <div id="divZSDQText" class="div_row_right" style="position: relative;">
                 </div>
+                <div id="divZSDQTip" class="Warn" style="z-index: 998; position: relative;"></div>
             </div>
             <div id="divXXXX" class="div_split" style="display: block; text-align: left;">
                 <span class="span_split">加盟项目描述</span>
