--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ZSJM_JYPX/ZSJM_JYPX.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ZSJM_JYPX/ZSJM_JYPX.cshtml
@@ -80,7 +80,7 @@
                 <span class="span_split">基本信息</span>
                 <em class="em_split"></em>
             </div>
-            <div id="divCYLB" class="div_row" style="z-index: 999;">
+            <div id="divJYPXLB" class="div_row" style="z-index: 999;">
                 <div class="div_row_left" style="margin-left: 128px;">
                     <span class="span_required">*</span>
                     <span class="spanFWCZ">类别</span>
@@ -95,14 +95,16 @@
                         </div>
                     </div>
                 </div>
+                <div id="divJYPXLBTip" class="Warn" style="z-index: 998; position: relative;"></div>
             </div>
             <div id="divJYPXXL" class="div_row" style="z-index: 996; display: none;">
                 <div class="div_row_left" style="margin-left: 128px;">
-                    <span class="span_required">&nbsp;</span>
+                    <span class="span_required">*</span>
                     <span id="spanJYPXXL">小类</span>
                 </div>
                 <div id="divJYPXXLText" class="div_row_right" style="position: relative;">
                 </div>
+                <div id="divJYPXXLTip" class="Warn" style="z-index: 998; position: relative;"></div>
             </div>
             <div id="divPPMC" class="div_row" style="margin-top: 22px; z-index: 998; ">
                 <div class="div_row_left">
@@ -130,7 +132,7 @@
                     </div>
                 </div>
             </div>
-            <div id="divCYTZJE" class="div_row" style="z-index: 996;">
+            <div id="divJYPXTZJETZJE" class="div_row" style="z-index: 996;">
                 <div class="div_row_left">
                     <span class="span_required">*</span>
                     <span class="spanFWCZ">投资金额</span>
@@ -145,6 +147,7 @@
                         </div>
                     </div>
                 </div>
+                <div id="divJYPXTZJETip" class="Warn" style="z-index: 998; position: relative;"></div>
             </div>
             <div id="divCYQGFDS" class="div_row" style="z-index: 995;">
                 <div class="div_row_left" style="margin-left: 85px;">
@@ -213,6 +216,7 @@
                 </div>
                 <div id="divZSDQText" class="div_row_right" style="position: relative;">
                 </div>
+                <div id="divZSDQTip" class="Warn" style="z-index: 998; position: relative;"></div>
             </div>
             <div id="divXXXX" class="div_split" style="display: block; text-align: left;">
                 <span class="span_split">加盟项目描述</span>
