--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ZSJM_NY/ZSJM_NY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ZSJM_NY/ZSJM_NY.cshtml
@@ -79,7 +79,7 @@
                 <span class="span_split">基本信息</span>
                 <em class="em_split"></em>
             </div>
-            <div id="divCYLB" class="div_row" style="z-index: 999;">
+            <div id="divNYLB" class="div_row" style="z-index: 999;">
                 <div class="div_row_left" style="margin-left: 128px;">
                     <span class="span_required">*</span>
                     <span class="spanFWCZ">类别</span>
@@ -94,14 +94,16 @@
                         </div>
                     </div>
                 </div>
+                <div id="divNYLBTip" class="Warn" style="z-index: 998; position: relative;"></div>
             </div>
             <div id="divNYXL" class="div_row" style="z-index: 996; display: none;">
                 <div class="div_row_left" style="margin-left: 128px;">
-                    <span class="span_required">&nbsp;</span>
+                    <span class="span_required">*</span>
                     <span id="spanNYXL">小类</span>
                 </div>
                 <div id="divNYXLText" class="div_row_right" style="position: relative;">
                 </div>
+                <div id="divNYXLTip" class="Warn" style="z-index: 998; position: relative;"></div>
             </div>
             <div id="divPPMC" class="div_row" style="margin-top: 22px; z-index: 998; ">
                 <div class="div_row_left">
@@ -109,7 +111,7 @@
                     <span id="spanPPMC">品牌名称</span>
                 </div>
                 <div class="div_row_right">
-                    <input id="PPMC" maxlength="50" column="PPMC" class="span_spaninput SRK" style="width: 594px; padding: 6px 12px;" type="text" placeholder="填写真实的品牌名称可以提升搜索流量，增加品牌曝光" />
+                    <input id="PPMC" maxlength="50" column="PPMC" class="span_spaninput SRK" style="width: 594px; padding: 6px 12px;" type="text" placeholder="填写真实的品牌名称可以提升搜索流量，增加品牌曝光"/>
                     <div id="divPPMCTip"></div>
                 </div>
             </div>
@@ -129,7 +131,7 @@
                     </div>
                 </div>
             </div>
-            <div id="divCYTZJE" class="div_row" style="z-index: 996;">
+            <div id="divNYTZJE" class="div_row" style="z-index: 996;">
                 <div class="div_row_left">
                     <span class="span_required">*</span>
                     <span class="spanFWCZ">投资金额</span>
@@ -144,6 +146,7 @@
                         </div>
                     </div>
                 </div>
+                <div id="divNYTZJETip" class="Warn" style="z-index: 998; position: relative;"></div>
             </div>
             <div id="divCYQGFDS" class="div_row" style="z-index: 995;">
                 <div class="div_row_left" style="margin-left: 85px;">
@@ -212,6 +215,7 @@
                 </div>
                 <div id="divZSDQText" class="div_row_right" style="position: relative;">
                 </div>
+                <div id="divZSDQTip" class="Warn" style="z-index: 998; position: relative;"></div>
             </div>
             <div id="divXXXX" class="div_split" style="display: block; text-align: left;">
                 <span class="span_split">加盟项目描述</span>
