--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ZSJM_TS/ZSJM_TS.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ZSJM_TS/ZSJM_TS.cshtml
@@ -80,7 +80,7 @@
                 <span class="span_split">基本信息</span>
                 <em class="em_split"></em>
             </div>
-            <div id="divCYLB" class="div_row" style="z-index: 999;">
+            <div id="divTSLB" class="div_row" style="z-index: 999;">
                 <div class="div_row_left" style="margin-left: 128px;">
                     <span class="span_required">*</span>
                     <span class="spanFWCZ">类别</span>
@@ -95,6 +95,7 @@
                         </div>
                     </div>
                 </div>
+                <div id="divTSLBTip" class="Warn" style="z-index: 998; position: relative;"></div>
             </div>
             <div id="divTSXL" class="div_row" style="z-index: 996; display: none;">
                 <div class="div_row_left" style="margin-left: 128px;">
@@ -103,6 +104,7 @@
                 </div>
                 <div id="divTSXLText" class="div_row_right" style="position: relative;">
                 </div>
+                <div id="divTSXLTip" class="Warn" style="z-index: 998; position: relative;"></div>
             </div>
             <div id="divPPMC" class="div_row" style="margin-top: 22px; z-index: 998; ">
                 <div class="div_row_left">
@@ -130,7 +132,7 @@
                     </div>
                 </div>
             </div>
-            <div id="divCYTZJE" class="div_row" style="z-index: 996;">
+            <div id="divTSTZJE" class="div_row" style="z-index: 996;">
                 <div class="div_row_left">
                     <span class="span_required">*</span>
                     <span class="spanFWCZ">投资金额</span>
@@ -145,6 +147,7 @@
                         </div>
                     </div>
                 </div>
+                <div id="divTSTZJETip" class="Warn" style="z-index: 998; position: relative;"></div>
             </div>
             <div id="divCYQGFDS" class="div_row" style="z-index: 995;">
                 <div class="div_row_left" style="margin-left: 85px;">
@@ -213,6 +216,7 @@
                 </div>
                 <div id="divZSDQText" class="div_row_right" style="position: relative;">
                 </div>
+                <div id="divZSDQTip" class="Warn" style="z-index: 998; position: relative;"></div>
             </div>
             <div id="divXXXX" class="div_split" style="display: block; text-align: left;">
                 <span class="span_split">加盟项目描述</span>
