--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/PFCG_LP/PFCG_LP.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/PFCG_LP/PFCG_LP.cshtml
@@ -88,7 +88,7 @@
                     <div id="divBTTip"></div>
                 </div>
             </div>
-            <div id="divLPLB" class="div_row" style="z-index: 999">
+            <div id="divOUTLB" class="div_row" style="z-index: 999">
                 <div class="div_row_left" style="margin-left: 128px;">
                     <span class="span_required">*</span>
                     <span class="spanFWCZ">类别</span>
@@ -112,7 +112,7 @@
                         </div>
                     </div>
                 </div>
-                <div id="divLPLBTip" class="Warn" style="z-index: 998; position: relative;"></div>
+                <div id="divOUTLBTip" class="Warn" style="z-index: 998; position: relative;"></div>
             </div>
             <div id="divXXXX" class="div_split" style="display: block; text-align: left;">
                 <span class="span_split">特色描述</span>
